--- a/ankete.html
+++ b/ankete.html
@@ -148,7 +148,7 @@
 <body>
   <header>
     <h1>Politične ankete - Volitve 2026</h1>
-    <a href="https://x.com/Jann27589642"><img src="/X.png"></img></a>
+    <a href="https://x.com/Jann27589642"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/X_logo_2023_%28white%29.png/500px-X_logo_2023_%28white%29.png"></img></a>
   </header>
     
   <nav>
