--- a/ankete.html
+++ b/ankete.html
@@ -181,7 +181,7 @@
     </a>
     <h1>Politične ankete - Volitve 2026</h1>
     <a href="#" onclick="openModal()" style="display: flex; flex-direction: column; align-items: center; text-decoration: none; color: white; margin-right: 1rem;">
-      <img src="https://www.iconsdb.com/icons/preview/white/info-xxl.png" style="width: 40px; height: auto;">
+      <img src="info-xxl.png" style="width: 40px; height: auto;">
       <span style="font-size: 0.8rem; margin-top: 0.25rem;">Info</span>
     </a>
   </header>
