--- a/ankete.html
+++ b/ankete.html
@@ -202,8 +202,8 @@
   </div>
 
   <nav>
-    <button class="tab" data-tab="najnovejse">Najnovejše</button>
-    <button class="tab active" data-tab="mediana">Mediana</button>
+    <button class="tab active" data-tab="najnovejse">Najnovejše</button>
+    <button class="tab" data-tab="mediana">Mediana</button>
     <button class="tab" data-tab="ninamedia">Ninamedia</button>
     <button class="tab" data-tab="parsifal">Parsifal</button>
     <button class="tab" data-tab="ostali">Ostali</button>
