--- a/ankete.html
+++ b/ankete.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Politične ankete - Volitve 2026</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
