--- a/ankete.html
+++ b/ankete.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <title>Politične ankete - Volitve 2026</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-NP1QVV51C2"></script>
+ <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+ 
+   gtag('config', 'G-NP1QVV51C2');
+ </script>
   <style>
     body {
       font-family: Arial, sans-serif;
