--- a/ankete.html
+++ b/ankete.html
@@ -185,7 +185,7 @@
 <body>
   <header>
     <a href="https://x.com/Jann27589642" style="display: flex; flex-direction: column; align-items: center; text-decoration: none; color: white; margin-left: 1rem;">
-      <img src="X.png" style="width: 40px; height: auto;">
+      <img src="X2.png" style="width: 40px; height: auto;">
       <span style="font-size: 0.8rem; margin-top: 0.25rem;">@jan</span>
     </a>
     <h1>Politične ankete - Volitve 2026</h1>
