--- a/ankete.html
+++ b/ankete.html
@@ -13,6 +13,10 @@
  
    gtag('config', 'G-NP1QVV51C2');
  </script>
+ <meta property="og:image" content="https://jan2749.github.io/ankete/naslovna.png">
+ <meta property="og:title" content="Politične ankete">
+ <meta property="og:description" content="Vse ankete z izračuni na enem mestu">
+ <meta property="og:type" content="website">
   <style>
     body {
       font-family: Arial, sans-serif;
