--- a/ankete.html
+++ b/ankete.html
@@ -17,6 +17,7 @@
  <meta property="og:title" content="Politične ankete">
  <meta property="og:description" content="Vse ankete z izračuni na enem mestu">
  <meta property="og:type" content="website">
+ <meta name="twitter:card" content="summary_large_image">
   <style>
     body {
       font-family: Arial, sans-serif;
